test/sema/trait_objects/coerce_ptr_to_impl_return_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B {}

struct S {
  impl A;
}

fn foo(): *impl A {
  // CHECK: [[# @LINE + 1 ]]:15: error: cannot return '*mut S' from a function returning '*impl A'
  return gcMut(S{});
}

fn bar(): *impl B {
  // CHECK: [[# @LINE + 1 ]]:12: error: cannot satisfy constraint 'S : B'
  return gc(S{});
}

fn main() {}